--- a/index.html
+++ b/index.html
@@ -21,7 +21,42 @@
   <div class="container">
     <!--header section start-->
     <header>
-      
+      <div class="wrapper">
+        <h1>
+          <a href="index.html" title="Logo">
+            <img src="https://via.placeholder.com/171x61.png?text=blue+economy" alt="Logo">
+          </a>
+        </h1>
+        <div class="menu-wrap">
+          <div class="hamburger">
+            <span class="line">hamburger lines</span>
+            <span class="line">hamburger lines</span>
+            <span class="line">hamburger lines</span>
+          </div>
+          <nav>
+            <ul class="menu">
+              <li>
+                <a href="index.html" title="Home" class="active">home</a>
+              </li>
+              <li>
+                <a href="#FIXME" title="About Us">about us</a>
+              </li>
+              <li>
+                <a href="#FIXME" title="Work Areas">work areas</a>
+              </li>
+              <li>
+                <a href="#FIXME" title="World Ocean Summit">world ocean summit</a>
+              </li>
+              <li>
+                <a href="#FIXME" title="Engage">engage</a>
+              </li>
+            </ul>
+          </nav>
+        </div> 
+        <div>
+          <span class="search">search</span>
+        </div>
+      </div>
     </header>
     <!--header section start-->
     <!--main section start-->
