--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
     <!--header section start-->
     <!--main section start-->
     <main>
-
+      <!--banner section start-->
+      <section class="banner">
+        <div class="wrapper">
+          
+        </div>
+      </section>
+      <!--banner section start-->
     </main>
     <!--main section end-->
 
