banner section structuring ended

--- a/index.html
+++ b/index.html
@@ -64,7 +64,17 @@
       <!--banner section start-->
       <section class="banner">
         <div class="wrapper">
-          
+          <div class="banner-title">
+            <h1>blue economy</h1>
+          </div> 
+          <div class="banner-description">
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore saepe 
+              accusamus adipisci, a velit praesentium magni quaerat, perferendis, 
+              nam eveniet incidunt voluptas quae quis animi nobis asperiores nisi ducimus!
+              Lorem ipsum dolor sit amet consectetur.
+            </p>
+          </div>
         </div>
       </section>
       <!--banner section start-->
