event section structuring started

--- a/index.html
+++ b/index.html
@@ -77,7 +77,14 @@
           </div>
         </div>
       </section>
-      <!--banner section start-->
+      <!--banner section end-->
+      <!--event section start-->
+      <section>
+        <div class="wrapper">
+
+        </div>
+      </section>
+      <!--event section end-->
     </main>
     <!--main section end-->
 
