event section structuring ended

--- a/index.html
+++ b/index.html
@@ -80,8 +80,39 @@
       <!--banner section end-->
       <!--event section start-->
       <section>
-        <div class="wrapper">
-
+        <ul class="wrapper">
+          <ul>
+            <li class="event-description">
+              <h3>world ocean summit 2017</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus ipsum sed
+                soluta cum impedit ratione, commodi beatae animi dolorum provident...
+              </p>
+              <ul class="event-button">
+                <li>
+                  <a href="#FIXME" title="Read More">read more</a>
+                </li>
+                <li>
+                  <a href="#FIXME" title="Book Now">book now</a>
+                </li>
+              </ul>
+              <ul class="event-venue">
+                <li>
+                  <a href="#FIXME" title="Location" class="location">location</a>
+                  <span>bali,indonesia</span>
+                </li>
+                <li>
+                  <a href="#FIXME" title="Calender" class="calender">calender</a>
+                  <span>february 22nd-24th 2017</span>
+                </li>
+              </ul>
+            </li>
+            <li class="event-image">
+              <figure>
+                <img src="https://via.placeholder.com/643x388.png?text=event" alt="Event">
+              </figure>
+            </li>
+          </ul>
         </div>
       </section>
       <!--event section end-->
