articles section structuring started

--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
         </div>
       </section>
       <!--event section end-->
+      <!--articles section start-->
+      <section class="articles">
+        <div class="wrapper">
+          
+        </div>
+      </section>
+      <!--articles section end-->
     </main>
     <!--main section end-->
 
