articles section structuring ended

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <!--event section start-->
       <section>
         <ul class="wrapper">
-          <ul>
+          <ul class="event-content">
             <li class="event-description">
               <h3>world ocean summit 2017</h3>
               <p>
@@ -90,10 +90,10 @@
               </p>
               <ul class="event-button">
                 <li>
-                  <a href="#FIXME" title="Read More">read more</a>
+                  <a href="#FIXME" class="button" title="Read More">read more</a>
                 </li>
                 <li>
-                  <a href="#FIXME" title="Book Now">book now</a>
+                  <a href="#FIXME" class="button" title="Book Now">book now</a>
                 </li>
               </ul>
               <ul class="event-venue">
@@ -119,7 +119,241 @@
       <!--articles section start-->
       <section class="articles">
         <div class="wrapper">
-          
+          <h4>featured articles</h4>
+          <span class="underline">line</span>
+          <ul class="articles-content">
+            <li class="tabs">
+              <ul class="tabs-content">
+                <li class="link active-tab" data="tab1">
+                  <span>saving corals</span>
+                  <p>Lorem ipsum dolor sit amet, consectet...</p>
+                </li>
+                <li class="link" data="tab2">
+                  <span>saving corals</span>
+                  <p>Lorem ipsum dolor sit amet, consectet...</p>
+                </li>
+                <li class="link" data="tab3">
+                  <span>saving corals</span>
+                  <p>Lorem ipsum dolor sit amet, consectet...</p>
+                </li>
+                <li class="link" data="tab4">
+                  <span>saving corals</span>
+                  <p>Lorem ipsum dolor sit amet, consectet...</p>
+                </li>
+                <li class="link" data="tab5">
+                  <span>saving corals</span>
+                  <p>Lorem ipsum dolor sit amet, consectet...</p>
+                </li>
+                <li class="link" data="tab6">
+                  <span>saving corals</span>
+                  <p>Lorem ipsum dolor sit amet, consectet...</p>
+                </li>
+                <li class="link" data="tab7">
+                  <span>saving corals</span>
+                  <p>Lorem ipsum dolor sit amet, consectet...</p>
+                </li>
+                <li class="link" data="tab8">
+                  <span>saving corals</span>
+                  <p>Lorem ipsum dolor sit amet, consectet...</p>
+                </li>
+              </ul>
+            </li>
+            <li class="articles-description">
+              <div id="tab1" class="tab-content active-tab">
+                <ul class="tab-heading">
+                  <li>
+                    <h5>saving corals</h5>
+                  </li>
+                  <li>
+                    <span>blue economy</span>
+                  </li>                  
+                </ul>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi...
+                </p>
+                <ul class="tab-links">
+                  <li>
+                    <a href="#FIXME" class="cpoy">copy</a>
+                    <span>economist intelligence unit</span>
+                  </li>
+                  <li>
+                    <a href="#FIXME" class="button tab-button" title="read more"></a>
+                  </li>
+                </ul>
+              </div>
+              <div id="tab2" class="tab-content">
+                <ul class="tab-heading">
+                  <li>
+                    <h5>saving corals</h5>
+                  </li>
+                  <li>
+                    <span>blue economy</span>
+                  </li>                  
+                </ul>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi...
+                </p>
+                <ul class="tab-links">
+                  <li>
+                    <a href="#FIXME" class="cpoy">copy</a>
+                    <span>economist intelligence unit</span>
+                  </li>
+                  <li>
+                    <a href="#FIXME" class="button tab-button" title="read more"></a>
+                  </li>
+                </ul>
+              </div>
+              <div id="tab3" class="tab-content">
+                <ul class="tab-heading">
+                  <li>
+                    <h5>saving corals</h5>
+                  </li>
+                  <li>
+                    <span>blue economy</span>
+                  </li>                  
+                </ul>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi...
+                </p>
+                <ul class="tab-links">
+                  <li>
+                    <a href="#FIXME" class="cpoy">copy</a>
+                    <span>economist intelligence unit</span>
+                  </li>
+                  <li>
+                    <a href="#FIXME" class="button tab-button" title="read more"></a>
+                  </li>
+                </ul>
+              </div>
+              <div id="tab4" class="tab-content">
+                <ul class="tab-heading">
+                  <li>
+                    <h5>saving corals</h5>
+                  </li>
+                  <li>
+                    <span>blue economy</span>
+                  </li>                  
+                </ul>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi...
+                </p>
+                <ul class="tab-links">
+                  <li>
+                    <a href="#FIXME" class="cpoy">copy</a>
+                    <span>economist intelligence unit</span>
+                  </li>
+                  <li>
+                    <a href="#FIXME" class="button tab-button" title="read more"></a>
+                  </li>
+                </ul>
+              </div>
+              <div id="tab5" class="tab-content">
+                <ul class="tab-heading">
+                  <li>
+                    <h5>saving corals</h5>
+                  </li>
+                  <li>
+                    <span>blue economy</span>
+                  </li>                  
+                </ul>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi...
+                </p>
+                <ul class="tab-links">
+                  <li>
+                    <a href="#FIXME" class="cpoy">copy</a>
+                    <span>economist intelligence unit</span>
+                  </li>
+                  <li>
+                    <a href="#FIXME" class="button tab-button" title="read more"></a>
+                  </li>
+                </ul>
+              </div>
+              <div id="tab6" class="tab-content">
+                <ul class="tab-heading">
+                  <li>
+                    <h5>saving corals</h5>
+                  </li>
+                  <li>
+                    <span>blue economy</span>
+                  </li>                  
+                </ul>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi...
+                </p>
+                <ul class="tab-links">
+                  <li>
+                    <a href="#FIXME" class="cpoy">copy</a>
+                    <span>economist intelligence unit</span>
+                  </li>
+                  <li>
+                    <a href="#FIXME" class="button tab-button" title="read more"></a>
+                  </li>
+                </ul>
+              </div>
+              <div id="tab7" class="tab-content">
+                <ul class="tab-heading">
+                  <li>
+                    <h5>saving corals</h5>
+                  </li>
+                  <li>
+                    <span>blue economy</span>
+                  </li>                  
+                </ul>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi...
+                </p>
+                <ul class="tab-links">
+                  <li>
+                    <a href="#FIXME" class="cpoy">copy</a>
+                    <span>economist intelligence unit</span>
+                  </li>
+                  <li>
+                    <a href="#FIXME" class="button tab-button" title="read more"></a>
+                  </li>
+                </ul>
+              </div>
+              <div id="tab8" class="tab-content">
+                <ul class="tab-heading">
+                  <li>
+                    <h5>saving corals</h5>
+                  </li>
+                  <li>
+                    <span>blue economy</span>
+                  </li>                  
+                </ul>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi? eos magnam, aperiam sunt, possimus quod praesentium, saepe asperiores iste ex
+                   expedita dolor deserunt illo repellendus veniam ad alias doloremque excepturi...
+                </p>
+                <ul class="tab-links">
+                  <li>
+                    <a href="#FIXME" class="cpoy">copy</a>
+                    <span>economist intelligence unit</span>
+                  </li>
+                  <li>
+                    <a href="#FIXME" class="button tab-button" title="read more"></a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+          </div>
         </div>
       </section>
       <!--articles section end-->
