infographic section structuring started

--- a/index.html
+++ b/index.html
@@ -357,6 +357,13 @@
         </div>
       </section>
       <!--articles section end-->
+      <!--infographic section start-->
+      <section class="infographic">
+        <div class="wrapper">
+          
+        </div>
+      </section>
+      <!--infographic section end-->
     </main>
     <!--main section end-->
 
