infographic section structuring ended

--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@
       <!--articles section start-->
       <section class="articles">
         <div class="wrapper">
-          <h4>featured articles</h4>
-          <span class="underline">line</span>
+          <div class="section-title">
+            <h4>featured articles</h4>
+            <span class="underline">line</span>
+          </div>          
           <ul class="articles-content">
             <li class="tabs">
               <ul class="tabs-content">
@@ -360,7 +362,60 @@
       <!--infographic section start-->
       <section class="infographic">
         <div class="wrapper">
-          
+          <div class="section-title">
+            <h4>featured articles</h4>
+            <span class="underline">line</span>
+          </div>
+          <ul class="carousel">
+            <li class="slides slide-one active-slide">
+              <figure>
+                <img src="https://via.placeholder.com/445x500.png?text=slide+one" alt="Slide One">
+              </figure>
+              <div class="slide_content">
+                <span class="up bold">the see-through sea</span>
+                <p>if the ocean were transperent, what would humans see?</p>
+                <div>
+                  <a href="#FIXME" class="arrow" title="Right Arrow">arrow</a>
+                </div>
+              </div>
+            </li>
+            <li class="slides slide-two">
+              <figure>
+                <img src="https://via.placeholder.com/445x500.png?text=slide+two" alt="Slide Two">
+              </figure>
+              <div class="slide_content">
+                <span class="up bold">the see-through sea</span>
+                <p>if the ocean were transperent, what would humans see?</p>
+                <div>
+                  <a href="#FIXME" class="arrow" title="Right Arrow">arrow</a>
+                </div>
+              </div>
+            </li>
+            <li class="slides slide-three">
+              <figure>
+                <img src="https://via.placeholder.com/445x500.png?text=slide+three" alt="Slide Three">
+              </figure>
+              <div class="slide_content">
+                <span class="up bold">the see-through sea</span>
+                <p>if the ocean were transperent, what would humans see?</p>
+                <div>
+                  <a href="#FIXME" class="arrow" title="Right Arrow">arrow</a>
+                </div>
+              </div>
+            </li>
+            <li class="slides slide-four">
+              <figure>
+                <img src="https://via.placeholder.com/445x500.png?text=slide+four" alt="Slide Four">
+              </figure>
+              <div class="slide_content">
+                <span class="up bold">the see-through sea</span>
+                <p>if the ocean were transperent, what would humans see?</p>
+                <div>
+                  <a href="#FIXME" class="arrow" title="Right Arrow">arrow</a>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
       <!--infographic section end-->
