--- a/index.html
+++ b/index.html
@@ -416,9 +416,30 @@
               </div>
             </li>
           </ul>
+          <ul class="slider">
+            <li class="bar bar-one">
+              <span>slide-bar</span>
+            </li>
+            <li class="bar bar-two">
+              <span>slide-bar</span>
+            </li>
+            <li class="bar bar-three">
+              <span>slide-bar</span>
+            </li>
+            <li class="bar bar-four">
+              <span>slide-bar</span>
+            </li>
+          </ul>
         </div>
       </section>
       <!--infographic section end-->
+      <!--newsletter section start-->
+      <section class="newsletter">
+        <div class="wrapper">
+
+        </div>
+      </section>
+      <!--newsletter section end-->
     </main>
     <!--main section end-->
 
