newsletter section structuring ended

--- a/index.html
+++ b/index.html
@@ -436,7 +436,15 @@
       <!--newsletter section start-->
       <section class="newsletter">
         <div class="wrapper">
-
+          <span>subscribe to your newsletter</span>
+          <form>
+            <div>
+              <input type="email" placeholder="Enter your Email-ID">
+            </div>
+            <div class="newsletter-button">
+              <a href="#FIXME" class="send">send</a>
+            </div>
+          </form>          
         </div>
       </section>
       <!--newsletter section end-->
