footer structuring started

--- a/index.html
+++ b/index.html
@@ -450,10 +450,11 @@
       <!--newsletter section end-->
     </main>
     <!--main section end-->
-
     <!--footer section start-->
     <footer>      
+      <div class="wrapper">
 
+      </div>
     </footer>
     <!--footer section end-->
 
