footer structuring ended

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
               <input type="email" placeholder="Enter your Email-ID">
             </div>
             <div class="newsletter-button">
-              <a href="#FIXME" class="send">send</a>
+              <a href="#FIXME" class="send" title="Send">send</a>
             </div>
           </form>          
         </div>
@@ -453,11 +453,31 @@
     <!--footer section start-->
     <footer>      
       <div class="wrapper">
-
+        <div>
+          <a href="#FIXME" title="World Ocean Initiative">world ocean initiative</a>
+        </div>
+        <div>
+          <ul class="social-links">
+            <li>
+              <a href="#FIXME" class="facebook" title="Facebook">facebook</a>
+            </li>
+            <li>
+              <a href="#FIXME" class="twitter" title="Twitter">twitter</a>
+            </li>
+            <li>
+              <a href="#FIXME" class="google-plus" title="Google Plus">google plus</a>
+            </li>
+            <li>
+              <a href="#FIXME" class="linkedin" title="Linked In">linked in</a>
+            </li>
+          </ul>
+          <div>
+            <a href="#FIXME" class="button contact-button" title="Contact">contact us</a>
+          </div>
+        </div>
       </div>
     </footer>
     <!--footer section end-->
-
   </div>
   <!--container end-->
 
